Manual algorithm done